# noexcept_benchmark

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  catching_func.cpp  dummy_class.cpp  exported_func.cpp  inline_func_test.cpp  noexcept_benchmark.h  noexcept_benchmark_main.cpp  vector_reserve_test.cpp
lib/: catching_func.cpp  dummy_class.cpp  explicitly_terminate_on_any_exception.cpp  explicitly_terminate_on_exception.cpp  explicitly_terminate_on_std_exception.cpp  explicitly_terminate_versus_noexcept.cpp  exported_class.cpp  exported_func.cpp  inc_and_dec_test.cpp  inline_func_constexpr_false_test.cpp  inline_func_test.cpp  inline_func_volatile_bool_test.cpp  lib.h  stack_unwinding_array_test.cpp  stack_unwinding_larger_func_test.cpp  stack_unwinding_test.cpp  vector_reserve_test.cpp
